Add missing mostrarLogin function

--- a/reporte/index.html
+++ b/reporte/index.html
@@ -14,6 +14,15 @@
     <button class="docente-btn" onclick="mostrarLogin()">Docente</button>
     <button class="tutor-btn" onclick="mostrarConsultaTutor()">Tutor</button>
   </div>
-  ...
+
+  <script>
+    function mostrarLogin() {
+      window.location.href = 'usuarios.html';
+    }
+
+    function mostrarConsultaTutor() {
+      window.location.href = 'consulta.html';
+    }
+  </script>
 </body>
 </html>
